modernizing some java code and removing a useless parenthesis